[gd_scene load_steps=14 format=3 uid="uid://cmddg5wv0dp8m"]

[ext_resource type="Script" uid="uid://cw6qo4vaghkoi" path="res://scenes/objects/scripts/level_exit.gd" id="1_2wvin"]
[ext_resource type="Texture2D" uid="uid://b3oicqs67mm1j" path="res://assets/objects/objects.png" id="1_041fo"]
[ext_resource type="Texture2D" uid="uid://c04gduq36mevi" path="res://assets/background/Runes.PNG" id="2_2wvin"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urmku"]
size = Vector2(16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wvin"]
resource_local_to_scene = true
atlas = ExtResource("1_041fo")
region = Rect2(160, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_686pq"]
resource_local_to_scene = true
atlas = ExtResource("1_041fo")
region = Rect2(160, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gynqr"]
resource_local_to_scene = true
atlas = ExtResource("1_041fo")
region = Rect2(176, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_35mhq"]
atlas = ExtResource("2_2wvin")
region = Rect2(0, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hwdt"]
atlas = ExtResource("2_2wvin")
region = Rect2(16, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bynfe"]
atlas = ExtResource("2_2wvin")
region = Rect2(32, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y67j"]
atlas = ExtResource("2_2wvin")
region = Rect2(48, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3s84k"]
atlas = ExtResource("2_2wvin")
region = Rect2(144, 144, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_10mtc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35mhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hwdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bynfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y67j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3s84k")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="LevelExit" type="Area2D" groups=["LevelExit"]]
z_index = -1
script = ExtResource("1_2wvin")
id = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_urmku")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = SubResource("AtlasTexture_2wvin")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(0, -24)
texture = SubResource("AtlasTexture_686pq")

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(0, -40)
texture = SubResource("AtlasTexture_gynqr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -40)
sprite_frames = SubResource("SpriteFrames_10mtc")
autoplay = "default"
frame_progress = 0.7434334

[node name="Label" type="Label" parent="."]
z_index = 100
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -72.0
offset_right = 28.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
text = "Door 1"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="."]
z_index = 100
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -56.0
offset_right = 56.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Exit to  door -1"
horizontal_alignment = 1

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = 13.0
offset_top = -81.0
offset_right = 120.0
offset_bottom = -52.0

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 23.0
offset_top = 4.0
offset_right = 78.0
offset_bottom = 27.0
text = "Locked"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="door_used" from="." to="." method="_on_door_used"]
